Quartz sync: Dec 3, 2024, 9:57 AM

--- a/content/journal/2024-11-25.md
+++ b/content/journal/2024-11-25.md
@@ -4,21 +4,36 @@ time_created: 2024-09-10T07:26:54-04:00
 ---
 
 ## Models
-- [ ] 
+- [ ] [Qwen/QwQ-32B-Preview · Hugging Face](https://huggingface.co/Qwen/QwQ-32B-Preview)
+	- [ ] [QwQ: Reflect Deeply on the Boundaries of the Unknown | Qwen](https://qwenlm.github.io/blog/qwq-32b-preview/)
 ## Papers
-- [ ] 
+- [ ] [\[2411.17465\] ShowUI: One Vision-Language-Action Model for GUI Visual Agent](https://arxiv.org/abs/2411.17465)
+- [ ] [\[2411.17116\] Star Attention: Efficient LLM Inference over Long Sequences](https://arxiv.org/abs/2411.17116)
+- [ ] [\[2411.17685\] Attamba: Attending To Multi-Token States](https://arxiv.org/abs/2411.17685)
+	- [ ] [GitHub - NVIDIA/Star-Attention: Efficient LLM Inference over Long Sequences](https://github.com/NVIDIA/Star-Attention)
+- [ ] [\[2411.15242\] The Zamba2 Suite: Technical Report](https://arxiv.org/abs/2411.15242)
+- [ ] [\[2410.19055\] Newton Losses: Using Curvature Information for Learning with Differentiable Algorithms](https://arxiv.org/abs/2410.19055)
+- [ ] [\[2402.15898\] Transductive Active Learning: Theory and Applications](https://arxiv.org/abs/2402.15898)
 
 ## Code
-- [ ] 
+- [ ] [GitHub - ClashLuke/HeavyBall: Efficient optimizers](https://github.com/ClashLuke/HeavyBall)
 
 ## Articles
-- [ ] 
+- [ ] [Modular: Understanding SIMD: Infinite Complexity of Trivial Problems](https://www.modular.com/blog/understanding-simd-infinite-complexity-of-trivial-problems)
 
 ## Videos
-- [ ] 
+- [ ] [1st Workshop on X-Embodiment Robot Learning, CoRL'24 - YouTube](https://www.youtube.com/live/ELUMFpJCUS0?si=G6sqYTUK8OfFLmW5)
+- [ ] [Guest Lecture 2: Jiaming Song - Dream Machine: Video Foundation Models (KAIST CS492D, Fall 2024)](https://youtu.be/u5kk1aXHJpM?si=4TJuEZRvTtCPq5Ql)
+- [ ] [Hearing the AGI from GMM HMM to GPT 4o Yu Zhang - November 15th LTI Colloquium Speaker - Yu Zhang - YouTube](https://youtu.be/pRUrO0x637A?si=ybJ-fo_zXYxlCPPU)
+- [ ] [Newton Losses: Using Curvature Information for Learning with Differentiable Algorithms - NeurIPS2024 - YouTube](https://www.youtube.com/watch?v=7aFPIMqSEpw)
+- [ ] [Open Reasoning vs OpenAI - YouTube](https://youtu.be/vN8jBxEKkVo?si=bg9gvizvqql8B14H)
+- [ ] [Video Conferencing, Web Conferencing, Webinars, Screen Sharing - Zoom](https://uniroma1.zoom.us/rec/play/uqdPJmWh1hB6-KPfqduFEhhpuMNjOIsImwZv6IlXSdOb9IvNUQeI5B8rUP-jthXas73wHVv7tenKjUC0.0SiJz8YW2QL_JTAS?canPlayFromShare=true&from=share_recording_detail&startTime=1731330569000&componentName=rec-play&originRequestUrl=https%3A%2F%2Funiroma1.zoom.us%2Frec%2Fshare%2FV79IfR7Qad_7R_m8oZkw-91SjZoJSZnyrQJcCqJPi1CqQJf6H0bf93StGfKf0U0a.-nrbROSwkDqywXtb%3FstartTime%3D1731330569000)
+- [ ] [Learning on Graphs Conference - YouTube](https://www.youtube.com/@learningongraphs)
+- [ ] [A little guide to building Large Language Models in 2024 - YouTube](https://www.youtube.com/watch?v=2-SPH9hIKT8)
+- [ ] [Test-Time Adaptation: A New Frontier in AI - YouTube](https://www.youtube.com/watch?v=C6sSs6NgANo)
 
 ## Other
-- [ ]
+- [ ] [Pretraining Large Language Models](https://docs.google.com/presentation/d/1uFd95VFSefD_Pom12kZ6q7ZppBJuT-T1vSGMUojDaBQ/edit#slide=id.g310372d4572_0_1049)
 
 
 ## Tweets
