Quartz sync: Dec 4, 2024, 2:03 PM

--- a/content/journal/2024-12-02.md
+++ b/content/journal/2024-12-02.md
@@ -4,7 +4,7 @@ time_created: 2024-09-10T07:26:54-04:00
 ---
 
 ## Models
-- [ ] 
+- [ ] [Site Unreachable](https://aws.amazon.com/de/ai/generative-ai/nova/understanding/)
 ## Papers
 - [ ] [\[2411.18363\] ChatRex: Taming Multimodal LLM for Joint Perception and Understanding](https://arxiv.org/abs/2411.18363)
 - [ ] [\[2411.18207v1\] From Open Vocabulary to Open World: Teaching Vision Language Models to Detect Novel Objects](https://arxiv.org/abs/2411.18207v1)
@@ -15,20 +15,37 @@ time_created: 2024-09-10T07:26:54-04:00
 - [ ] [\[2411.16828\] CLIPS: An Enhanced CLIP Framework for Learning with Synthetic Captions](https://arxiv.org/abs/2411.16828)
 - [ ] [\[2412.00714\] Scaling New Frontiers: Insights into Large Recommendation Models](https://arxiv.org/abs/2412.00714)
 - [ ] [\[2411.16205\] MH-MoE: Multi-Head Mixture-of-Experts](https://arxiv.org/abs/2411.16205)
+- [ ] [\[2412.01720\] LamRA: Large Multimodal Model as Your Advanced Retrieval Assistant](https://arxiv.org/abs/2412.01720)
+- [ ] [\[2412.00965v1\] Token Cropr: Faster ViTs for Quite a Few Tasks](https://arxiv.org/abs/2412.00965v1)
+- [ ] [\[2412.01818\] \[CLS\] Attention is All You Need for Training-Free Visual Token Pruning: Make VLM Inference Faster](https://arxiv.org/abs/2412.01818)
+- [ ] [\[2412.01822v1\] VLsI: Verbalized Layers-to-Interactions from Large to Small Vision Language Models](https://arxiv.org/abs/2412.01822v1)
+- [ ] [\[2411.19842v1\] Scaling Transformers for Low-Bitrate High-Quality Speech Coding](https://arxiv.org/abs/2411.19842v1)
+- [ ] [\[2412.01562\] Detection, Pose Estimation and Segmentation for Multiple Bodies: Closing the Virtuous Circle](https://arxiv.org/abs/2412.01562)
+- [ ] [\[2410.23970\] TrAct: Making First-layer Pre-Activations Trainable](https://arxiv.org/abs/2410.23970)
+- [ ] [\[2412.01824\] X-Prompt: Towards Universal In-Context Image Generation in Auto-Regressive Vision Language Foundation Models](https://arxiv.org/abs/2412.01824)
+- [ ] [\[2412.01819\] Switti: Designing Scale-Wise Transformers for Text-to-Image Synthesis](https://arxiv.org/abs/2412.01819)
+- [ ] [\[2412.01940\] Down with the Hierarchy: The 'H' in HNSW Stands for "Hubs"](https://arxiv.org/abs/2412.01940)
+- [ ] [\[2412.01951\] Self-Improvement in Language Models: The Sharpening Mechanism](https://arxiv.org/abs/2412.01951)
+- [ ] [\[2210.13452\] MetaFormer Baselines for Vision](https://arxiv.org/abs/2210.13452)
 
 ## Code
 - [ ] [GitHub - IDEA-Research/ChatRex: Code for ChatRex: Taming Multimodal LLM for Joint Perception and Understanding](https://github.com/IDEA-Research/ChatRex)
 - [ ] [GitHub - 343gltysprk/ovow](https://github.com/343gltysprk/ovow)
 - [ ] [GitHub - Tencent/HunyuanVideo: HunyuanVideo: A Systematic Framework For Large Video Generation Model Training](https://github.com/Tencent/HunyuanVideo)
+- [ ] [GitHub - benbergner/cropr](https://github.com/benbergner/cropr)
+- [ ] [GitHub - Theia-4869/FasterVLM: Official code for paper: \[CLS\] Attention is All You Need for Training-Free Visual Token Pruning: Make VLM Inference Faster.](https://github.com/Theia-4869/FasterVLM)
 
 ## Articles
 - [ ] [Diffusion Meets Flow Matching](https://diffusionflow.github.io/)
+- [ ] [Optimizing ColPali for Retrieval at Scale, 13x Faster Results - Qdrant](https://qdrant.tech/blog/colpali-qdrant-optimization/)
+- [ ] [OpenAI's o1 using "search" was a PSYOP - by Nathan Lambert](https://www.interconnects.ai/p/openais-o1-using-search-was-a-psyop)
 
 ## Videos
 - [ ] [The Hitchhiker's Guide to Reasoning - YouTube](https://youtu.be/S5l5OvJ01ws?si=0IIwmoMhh5xeDJVv) #star
 
 ## Other
 - [ ] [GitHub - huggingface/smol-course: A course on aligning smol models.](https://github.com/huggingface/smol-course)
+- [ ] [arsaporta/symile-m3 · Datasets at Hugging Face](https://huggingface.co/datasets/arsaporta/symile-m3)
 
 
 ## Tweets
