Quartz sync: Dec 7, 2024, 11:50 AM

--- a/content/journal/2024-12-02.md
+++ b/content/journal/2024-12-02.md
@@ -5,6 +5,8 @@ time_created: 2024-09-10T07:26:54-04:00
 
 ## Models
 - [ ] [Site Unreachable](https://aws.amazon.com/de/ai/generative-ai/nova/understanding/)
+- [ ] [voyage-code-3: more accurate code retrieval with lower dimensional, quantized embeddings – Voyage AI](https://blog.voyageai.com/2024/12/04/voyage-code-3/)
+- [ ] [Introducing Moondream 0.5B: The World’s Smallest Vision-Language Model](https://moondream.ai/blog/introducing-moondream-0-5b)
 ## Papers
 - [ ] [\[2411.18363\] ChatRex: Taming Multimodal LLM for Joint Perception and Understanding](https://arxiv.org/abs/2411.18363)
 - [ ] [\[2411.18207v1\] From Open Vocabulary to Open World: Teaching Vision Language Models to Detect Novel Objects](https://arxiv.org/abs/2411.18207v1)
@@ -27,6 +29,17 @@ time_created: 2024-09-10T07:26:54-04:00
 - [ ] [\[2412.01940\] Down with the Hierarchy: The 'H' in HNSW Stands for "Hubs"](https://arxiv.org/abs/2412.01940)
 - [ ] [\[2412.01951\] Self-Improvement in Language Models: The Sharpening Mechanism](https://arxiv.org/abs/2412.01951)
 - [ ] [\[2210.13452\] MetaFormer Baselines for Vision](https://arxiv.org/abs/2210.13452)
+- [ ] [\[2412.03555\] PaliGemma 2: A Family of Versatile VLMs for Transfer](https://arxiv.org/abs/2412.03555)
+- [ ] [Probabilistic weather forecasting with machine learning | Nature](https://www.nature.com/articles/s41586-024-08252-9)
+- [ ] [\[2412.03561v1\] FLAIR: VLM with Fine-grained Language-informed Image Representations](https://arxiv.org/abs/2412.03561v1)
+- [ ] [\[2411.16318\] One Diffusion to Generate Them All](https://arxiv.org/abs/2411.16318)
+- [ ] [\[2412.04431\] Infinity: Scaling Bitwise AutoRegressive Modeling for High-Resolution Image Synthesis](https://arxiv.org/abs/2412.04431)
+- [ ] [\[2412.04468\] NVILA: Efficient Frontier Visual Language Models](https://arxiv.org/abs/2412.04468)
+- [ ] [One Step Diffusion via Shortcut Models | OpenReview](https://openreview.net/forum?id=OlzB6LnXcS)
+- [ ] [InternVL/InternVL2\_5\_report.pdf at main · OpenGVLab/InternVL · GitHub](https://github.com/OpenGVLab/InternVL/blob/main/InternVL2_5_report.pdf)
+- [ ] [\[2412.04234v1\] DEIM: DETR with Improved Matching for Fast Convergence](https://arxiv.org/abs/2412.04234v1)
+- [ ] [\[2412.04332\] Liquid: Language Models are Scalable Multi-modal Generators](https://arxiv.org/abs/2412.04332)
+- [ ] [\[2412.03215\] Beyond \[cls\]: Exploring the true potential of Masked Image Modeling representations](https://arxiv.org/abs/2412.03215)
 
 ## Code
 - [ ] [GitHub - IDEA-Research/ChatRex: Code for ChatRex: Taming Multimodal LLM for Joint Perception and Understanding](https://github.com/IDEA-Research/ChatRex)
@@ -34,11 +47,13 @@ time_created: 2024-09-10T07:26:54-04:00
 - [ ] [GitHub - Tencent/HunyuanVideo: HunyuanVideo: A Systematic Framework For Large Video Generation Model Training](https://github.com/Tencent/HunyuanVideo)
 - [ ] [GitHub - benbergner/cropr](https://github.com/benbergner/cropr)
 - [ ] [GitHub - Theia-4869/FasterVLM: Official code for paper: \[CLS\] Attention is All You Need for Training-Free Visual Token Pruning: Make VLM Inference Faster.](https://github.com/Theia-4869/FasterVLM)
+- [ ] [GitHub - fishaudio/fish-speech: SOTA Open Source TTS](https://github.com/fishaudio/fish-speech)
 
 ## Articles
 - [ ] [Diffusion Meets Flow Matching](https://diffusionflow.github.io/)
 - [ ] [Optimizing ColPali for Retrieval at Scale, 13x Faster Results - Qdrant](https://qdrant.tech/blog/colpali-qdrant-optimization/)
 - [ ] [OpenAI's o1 using "search" was a PSYOP - by Nathan Lambert](https://www.interconnects.ai/p/openais-o1-using-search-was-a-psyop)
+- [ ] [GenCast predicts weather and the risks of extreme conditions with state-of-the-art accuracy - Google DeepMind](https://deepmind.google/discover/blog/gencast-predicts-weather-and-the-risks-of-extreme-conditions-with-sota-accuracy/)
 
 ## Videos
 - [ ] [The Hitchhiker's Guide to Reasoning - YouTube](https://youtu.be/S5l5OvJ01ws?si=0IIwmoMhh5xeDJVv) #star
