Quartz sync: Dec 10, 2024, 8:18 AM

--- a/content/journal/2024-12-02.md
+++ b/content/journal/2024-12-02.md
@@ -57,6 +57,8 @@ time_created: 2024-09-10T07:26:54-04:00
 
 ## Videos
 - [ ] [The Hitchhiker's Guide to Reasoning - YouTube](https://youtu.be/S5l5OvJ01ws?si=0IIwmoMhh5xeDJVv) #star
+- [ ] [Aaron Defazio Talk (12.06.2024, UCLA) - YouTube](https://www.youtube.com/watch?v=QUgi3-XuZ3g)
+- [ ] [NEURAL NETWORKS ARE REALLY WEIRD... - YouTube](https://www.youtube.com/watch?v=YpFaPKOeNME)
 
 ## Other
 - [ ] [GitHub - huggingface/smol-course: A course on aligning smol models.](https://github.com/huggingface/smol-course)
