Quartz sync: Dec 13, 2024, 8:26 AM

--- a/content/journal/2024-12-09.md
+++ b/content/journal/2024-12-09.md
@@ -4,7 +4,7 @@ time_created: 2024-09-10T07:26:54-04:00
 ---
 
 ## Models
-- [ ] 
+- [ ] [GitHub - deepseek-ai/DeepSeek-VL2: DeepSeek-VL2: Mixture-of-Experts Vision-Language Models for Advanced Multimodal Understanding](https://github.com/deepseek-ai/DeepSeek-VL2)
 ## Papers
 - [ ] [\[2412.05270\] APOLLO: SGD-like Memory, AdamW-level Performance](https://arxiv.org/abs/2412.05270)
 - [ ] [\[2406.06484\] Parallelizing Linear Transformers with the Delta Rule over Sequence Length](https://arxiv.org/abs/2406.06484)
@@ -23,6 +23,13 @@ time_created: 2024-09-10T07:26:54-04:00
 - [ ] [\[2412.06674\] EMOv2: Pushing 5M Vision Model Frontier](https://arxiv.org/abs/2412.06674)
 - [ ] [\[2412.06774\] Visual Lexicon: Rich Image Features in Language Space](https://arxiv.org/abs/2412.06774)
 - [ ] [\[2412.06464\] Gated Delta Networks: Improving Mamba2 with Delta Rule](https://arxiv.org/abs/2412.06464)
+- [ ] [\[2412.06590v1\] Bridging the Divide: Reconsidering Softmax and Linear Attention](https://arxiv.org/abs/2412.06590v1)
+- [ ] [From Slow Bidirectional to Fast Causal Video Generators](https://causvid.github.io/)
+- [ ] [\[2412.04626\] BigDocs: An Open and Permissively-Licensed Dataset for Training Multimodal Models on Document and Code Tasks](https://arxiv.org/abs/2412.04626)
+- [ ] [RLDG: Robotic Generalist Policy Distillation via Reinforcement Learning](https://generalist-distillation.github.io/)
+- [ ] [\[2410.06718\] MatMamba: A Matryoshka State Space Model](https://arxiv.org/abs/2410.06718)
+- [ ] [\[2412.08905\] Phi-4 Technical Report](https://arxiv.org/abs/2412.08905)
+- [ ] [Byte Latent Transformer: Patches Scale Better Than Tokens | Research - AI at Meta](https://ai.meta.com/research/publications/byte-latent-transformer-patches-scale-better-than-tokens/)
 
 ## Code
 - [ ] [GitHub - BeSpontaneous/Scala-pytorch: Scala(NeurIPS 2024)](https://github.com/BeSpontaneous/Scala-pytorch)
@@ -48,3 +55,5 @@ time_created: 2024-09-10T07:26:54-04:00
 
 
 ![](https://x.com/SonglinYang4/status/1866089380986953873)
+
+![](https://x.com/nrehiew_/status/1866488228607582503)
