Quartz sync: Dec 17, 2024, 11:37 AM

--- a/content/journal/2024-12-16.md
+++ b/content/journal/2024-12-16.md
@@ -4,13 +4,17 @@ time_created: 2024-09-10T07:26:54-04:00
 ---
 
 ## Models
-- [ ] 
+- [ ] [Welcome to the Falcon 3 Family of Open Models!](https://huggingface.co/blog/falcon3)
 ## Papers
 - [ ] [\[2412.07752\] FlashRNN: Optimizing Traditional RNNs on Modern Hardware](https://arxiv.org/abs/2412.07752)
 - [ ] [\[2412.10360\] Apollo: An Exploration of Video Understanding in Large Multimodal Models](https://arxiv.org/abs/2412.10360)
 - [ ] [\[2412.10117\] CosyVoice 2: Scalable Streaming Speech Synthesis with Large Language Models](https://arxiv.org/abs/2412.10117)
 - [ ] [\[2410.18779\] A Little Help Goes a Long Way: Efficient LLM Training by Leveraging Small LMs](https://arxiv.org/abs/2410.18779)
 - [ ] [\[2412.10302\] DeepSeek-VL2: Mixture-of-Experts Vision-Language Models for Advanced Multimodal Understanding](https://arxiv.org/abs/2412.10302)
+- [ ] [\[2412.09607\] Spectral Image Tokenizer](https://www.arxiv.org/abs/2412.09607)
+- [ ] [\[2412.12095\] Causal Diffusion Transformers for Generative Modeling](https://arxiv.org/abs/2412.12095)
+- [ ] [\[2412.10437\] SVGFusion: Scalable Text-to-SVG Generation via Vector Space Diffusion](https://arxiv.org/abs/2412.10437)
+- [ ] [\[2410.02899\] FactCheckmate: Preemptively Detecting and Mitigating Hallucinations in LMs](https://arxiv.org/abs/2410.02899)
 
 ## Code
 - [ ] 
